# Xirea

./: .gitignore  LICENSE  LLAMA_SETUP.md  NATIVE_TROUBLESHOOTING.md  README.md  REQUIREMENTS.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/dannyk/xirea/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: .clang-format  CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/dannyk/xirea/: MainActivity.kt  XireaApplication.kt
app/src/main/java/com/dannyk/xirea/ai/: AIEngine.kt  LlamaCpp.kt
app/src/main/java/com/dannyk/xirea/data/dao/: AIModelDao.kt  ChatDao.kt  MessageDao.kt
app/src/main/java/com/dannyk/xirea/data/database/: XireaDatabase.kt
app/src/main/java/com/dannyk/xirea/data/download/: ModelDownloader.kt
app/src/main/java/com/dannyk/xirea/data/model/: AIModel.kt  Chat.kt  Message.kt
app/src/main/java/com/dannyk/xirea/data/preferences/: UserPreferences.kt
app/src/main/java/com/dannyk/xirea/data/repository/: ChatRepository.kt  ModelDownloader.kt  ModelRepository.kt
app/src/main/java/com/dannyk/xirea/navigation/: Screen.kt  XireaNavGraph.kt
app/src/main/java/com/dannyk/xirea/service/: DownloadService.kt
app/src/main/java/com/dannyk/xirea/util/: DateUtils.kt  StorageUtils.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/dannyk/xirea/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
screenshots/: README.md
(+13 files in other folders)
